<?xml version="1.0"?>
<package format="3">
  <name>two_link_arm_sim</name>
  <version>0.1.0</version>
  <description>A two-link robotic arm simulation package for educational purposes</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  
  <depend>gazebo_msgs</depend>
  
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
